--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
         </div>
         <h3>I build accessible, inclusive products and digital experiences for the web.</h3>
         <p>For me, coding is not just about writing lines of code—it's an art form, a craft. It's the thrill of creating something from nothing, the challenge of solving puzzles, and the satisfaction of making things work. The deeper I delve into the coding universe, the more I realize its vastness and the more I fall in love with it. I find joy in building things from scratch, as well as unraveling and solving complex problems. Each project is a new adventure, an opportunity to learn, adapt, and evolve as a developer.</p>
+        <p>here is first added paragraph via github</p>
         <div class="social-icons">
             <a href="https://github.com/gasperec" class="icon-link"><img src="../IMAGES/github_logo.svg" alt="GitHub"></a>
             <a href="https://www.instagram.com/igorgasperec/" class="icon-link"><img src="../IMAGES/instagram_logo.svg" alt="Instagram"></a>
