contact commit thursday

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
         <span class="bar"></span>
     </div>
     <!-- END of the added div -->
-    <ul class="nav-list>
-        <li><a href="/portfolio_page/html/index.html>Home</li>
+    <ul class="nav-list">
+        <li><a href="/html/index.html">Home</a></li>
         <li><a href="/html/about.html">About Me</a></li>
         <li><a href="/html/contact.html">Contact</a></li>
         <li><a href="/html/experience.html">Experience</a></li>
@@ -34,6 +34,8 @@
     <!-- Replace with appropriate content for each page -->
     <h1>Welcome to My Portfolio</h1>
     <p>Introduction about yourself and what visitors can expect to find on your website.</p>
+    <p>some change to check if git works</p>
+    <p>and some additional changes</p>
 </main>
 
 <!-- Footer -->
