home page paragraph

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Replace with appropriate content for each page -->
     <h1>Welcome to My Portfolio</h1>
     <p>Introduction about yourself and what visitors can expect to find on your website.</p>
+    <p>some changes to the home page for git</p>
 </main>
 
 <!-- Footer -->
