--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <h1>Welcome to My Portfolio</h1>
     <p>Introduction about yourself and what visitors can expect to find on your website.</p>
     <p>some changes to the home page for git</p>
+    <p>some more changes</p>
 </main>
 
 <!-- Footer -->
