--- a/resume.html
+++ b/resume.html
@@ -21,12 +21,12 @@
     </div>
     <!-- END of the added div -->
     <ul class="nav-list">
-        <li><a href="/html/index.html">Home</a></li>
-        <li><a href="/html/about.html">About Me</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
-        <li><a href="/html/experience.html">Experience</a></li>
-        <li><a href="/html/resume.html">Resume</a></li>
-        <li><a href="/html/work.html">Work</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About Me</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/experience.html">Experience</a></li>
+        <li><a href="/resume.html">Resume</a></li>
+        <li><a href="/work.html">Work</a></li>
     </ul>
 </nav>
 
