--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
         <title>Igor Gasperec - Portfolio</title>
         <link rel="stylesheet" href="/css/normalise.css">
         <link rel="stylesheet" href="/css/mystyles.css">
+        <script src="js/script.js"></script>
        
     </head>
     <body>
@@ -21,12 +22,12 @@
         </div>
         <!-- END of the added div -->
         <ul class="nav-list">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../about.html">About Me</a></li>
-            <li><a href="../contact.html">Contact</a></li>
-            <li><a href="../experience.html">Experience</a></li>
-            <li><a href="../resume.html">Resume</a></li>
-            <li><a href="../work.html">Work</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/experience.html">Experience</a></li>
+            <li><a href="/resume.html">Resume</a></li>
+            <li><a href="/work.html">Work</a></li>
         </ul>
     </nav>
 
