--- a/about.html
+++ b/about.html
@@ -28,6 +28,8 @@
             <li><a href="/experience.html">Experience</a></li>
             <li><a href="/resume.html">Resume</a></li>
             <li><a href="/work.html">Work</a></li>
+            <li><a href="/more.html">More</a></li>
+
         </ul>
     </nav>
 
