--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="/experience.html">Experience</a></li>
             <li><a href="/resume.html">Resume</a></li>
             <li><a href="/work.html">Work</a></li>
+            <li><a href="/more.html">More</a></li>
         </ul>
     </nav>
 
