--- a/more.html
+++ b/more.html
@@ -7,6 +7,7 @@
         <title>Igor Gasperec - Portfolio</title>
         <link rel="stylesheet" href="/css/normalise.css">
         <link rel="stylesheet" href="/css/mystyles.css">
+        <link rel="stylesheet" href="/css/form.css">
        
     </head>
     <body>
