added My curriculum page into the experience.html

--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,7 @@
         <title>Igor Gasperec - Portfolio</title>
         <link rel="stylesheet" href="/css/normalise.css">
         <link rel="stylesheet" href="/css/mystyles.css">
+        <link rel="stylesheet" href="/css/experience.css">  
        
     </head>
     <body>
@@ -33,11 +34,65 @@
 
 <!-- Main Content -->
 <main class="container">
-    <!-- Replace with appropriate content for each page -->
-    <h1>Welcome to My Portfolio</h1>
-    <p>Introduction about yourself and what visitors can expect to find on your website.</p>
-    <p>test adding some experience</p>
-    <p>testing additional changes</p>
+    <!-- Centered section -->
+    <h1 style="text-align: center;">My Curriculum</h1>
+    <p><br>My experience is a testament to my journey in web and software development. My commitment to this path has led me to significant achievements, with HTML and CSS Essentials as my starting point.<br><br></p>
+
+    <!-- Blue subtitle -->
+    <h2>In the realm of web development</h2>
+    <p>I've laid a strong foundation with the following skills:</p>
+    <ul style="list-style: none;">
+        <li><strong>HTML Essentials:</strong> HTML, the backbone of web pages, is now at my fingertips. I can construct web structures with ease and precision.</li>
+        <li><strong>CSS Essentials:</strong> Cascading Style Sheets (CSS) have become my creative canvas, allowing me to design visually appealing and responsive web interfaces.</li>
+    </ul>
+
+    <p>These accomplishments reflect the dedication I've poured into this journey. As I stand here, I'm excited about the road ahead, which promises numerous milestones and new skills. Here's what's on my horizon:</p>
+
+    <!-- Red subtitle -->
+    <h2>My next steps</h2>
+    <ul style="list-style: none;">
+        <li><strong>Learn the Command Line:</strong> I'm currently exploring the intricacies of the command line, a vital tool for system management and automation.</li>
+        <li><strong>Learn Git &amp; GitHub:</strong> Git and GitHub are next in my agenda. Mastering these tools for version control and collaboration is crucial in my development path.</li>
+        <li><strong>Learn JavaScript:</strong> JavaScript, the dynamic language behind the web, is my next challenge. With it, I'll be able to create interactive web experiences.</li>
+        <li><strong>Learn Python 3:</strong> Python, known for its versatility, will be my next venture, opening doors to diverse fields, from web development to data science.</li>
+    </ul>
+
+    <p>My aim is to complete these steps and create a <strong>Portfolio Website Project</strong> that showcases my skills and projects. I anticipate this project to be a culmination of my HTML and CSS proficiency, with dynamic features powered by JavaScript.</p>
+
+    <p>With a well-defined timeline, I'm working diligently to achieve these goals within the next [insert your estimated timeframe, such as "6 months" or "one year"]. I'm fully aware that the journey has only just begun, and I'm prepared to embrace every challenge and opportunity.</p>
+
+    <!-- Red subtitle -->
+    <h2>Additional courses</h2>
+    <ul>
+        <li><strong>AWS Certified Cloud Practitioner (official qualification):</strong> In the near future, I aim to obtain this certification to navigate the world of cloud computing.</li>
+        <li><strong>Microsoft Certified: Azure Administrator Associate (official qualification):</strong> My aspirations include gaining proficiency in Microsoft Azure, a major cloud platform.</li>
+    </ul>
+
+    <p>My portfolio page is a testament to my progress and the exciting developments to come. Thank you for being a part of my journey, and I'm eager to share my growth with you. Stay tuned for more accomplishments in the ever-evolving world of web and software development.</p>
+
+
+
+    <p>I've embarked on a path that's not only about acquiring skills but also about embracing the ever-changing landscape of technology.</p>
+
+    <p>My journey started with a strong foundation in web development, mastering HTML and CSS Essentials. These form the basis of my capabilities, allowing me to construct web structures with precision and design visually appealing, responsive interfaces. However, I've only scratched the surface of what's possible.</p>
+
+    <p>To ensure I achieve the highest possible outcomes from my learning journey, I've been actively engaging with a variety of platforms and tools. My approach is not just about acquiring knowledge; it's about applying it in a practical and dynamic way.</p>
+<ul>
+    <li><strong>Mimo.org</strong></li>
+    <p>To learn the basics, I've incorporated the innovative approach of Mimo.org, where I turn learning into a game. Through this app, I've undertaken numerous projects that not only teach me the fundamentals but also prepare me for real-world corporate projects.</p>
+
+    <li>Visual Studio</li>
+    <p>For my personal projects, I prefer the versatility and robustness of Visual Studio. It's my playground for creativity and experimentation, where I can apply my growing knowledge to craft solutions.</p>
+
+    <li>GitHub</li>
+    <p>My commitment to continuous improvement is fueled by collaborating with my tutor on GitHub. Together, we identify and address my inefficiencies, transforming them into opportunities for growth. GitHub is where my projects come to life, and the community of developers there provides invaluable feedback and mentorship.</p>
+
+    <li>OpenAI with GitCopilot</li>
+    <p>Understanding complex concepts is made more accessible through OpenAI with GitCopilot. These innovative tools assist me in navigating the intricacies of programming, enriching my learning experience.</p>
+
+    <p>My journey is marked not just by innate intelligence but by a deep-rooted consistency. I understand that I might not be the smartest learner, but my persistence is my superpower. I believe in the power of passion, vulnerability, and an unwavering commitment to achieving my goals.</p>
+
+    <p>In sharing my journey through this portfolio, I aim to connect with potential future employers who recognize not only the skills I'm building but also the heart and tenacity that drive me forward. It's my honor to invite you to be a part of this dynamic and evolving journey. Stay tuned for more accomplishments and breakthroughs in the ever-evolving world of web and software development.</p>
 </main>
 
 <!-- Footer -->
