extra experience paragraph

--- a/experience.html
+++ b/experience.html
@@ -93,7 +93,7 @@
     <p>My journey is marked not just by innate intelligence but by a deep-rooted consistency. I understand that I might not be the smartest learner, but my persistence is my superpower. I believe in the power of passion, vulnerability, and an unwavering commitment to achieving my goals.</p>
 
     <p>In sharing my journey through this portfolio, I aim to connect with potential future employers who recognize not only the skills I'm building but also the heart and tenacity that drive me forward. It's my honor to invite you to be a part of this dynamic and evolving journey. Stay tuned for more accomplishments and breakthroughs in the ever-evolving world of web and software development.</p>
-
+    <p>extra experience paragraph</p>
 </main>
 
 <!-- Footer -->
