added resume from Amazon trainer role

--- a/resume.html
+++ b/resume.html
@@ -33,10 +33,74 @@
 
 <!-- Main Content -->
 <main class="container">
-    <!-- Replace with appropriate content for each page -->
-    <h1>Welcome to My Portfolio</h1>
-    <p>Introduction about yourself and what visitors can expect to find on your website.</p>
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IGOR GASPEREC - Resume</title>
+    <link rel="stylesheet" href="/css/normalise.css">
+    <link rel="stylesheet" href="/css/mystyles.css">
+</head>
+<body>
+    <h1>IGOR GASPEREC</h1>
+    <p>Orsett Road 116, RM175ET, Grays, Essex, +447874038582, iggasperec@gmail.com</p>
+
+    <h2>PROFESSIONAL SUMMARY</h2>
+    <p>Results-driven Associate with experience as Team Lead passionate about interacting and engaging with people. Carrying the experience in working with various levels of personnel in different organizations. Exponential problem solver with excellent analytical skills and solid computer literacy. Quickly learn new concepts and adapt well to new and changing conditions. Working well under pressure and adhere to strict deadlines. In charge of experimental shift pattern where I developed many improvements that helped continuously improve the health and safety as well as productivity metrics on site.</p>
+
+    <h2>WORK EXPERIENCE</h2>
+    <h3>Pool Associate L1, AMAZON FC (2020 - 2023)</h3>
+    <ul>
+        <li>Interact and engage with associates, ensuring their mental and physical safety and well-being</li>
+        <li>Maintain safety, quality, and productivity expectations</li>
+        <li>As a Step-Up Team Lead in the Picking Department, I developed and implemented a sustainable system that significantly improved turnaround time and decreased travel time during station relocations.</li>
+        <li>Built a positive work environment where trust and equality between different stakeholders are emphasized</li>
+        <li>Continuously observe and improve new areas to create a safer and more efficient workplace</li>
+        <li>Gained additional skills in pick, stow and QB department</li>
+    </ul>
+
+    <h3>Fulfilment Associate L1, AMAZON FC (2018 - 2020)</h3>
+    <ul>
+        <li>Led day 0 training for new employees and instructed on various tasks such as Pump Truck operation, ERGO Pack, ATS Card Operator, Loader, TSO, Indoor Marshal, Manual Induct, box sorting, picking, and pallet handling.</li>
+        <li>Proven ability to meet targets and deadlines with ongoing improvements and efficiency in the department</li>
+        <li>Created new staging areas and trained employees on sustainability practices</li>
+        <li>Served as a problem-solver, packer, rebiner, jam buster, and WS</li>
+        <li>Acted as a sustainability ambassador and member of the engagement committee</li>
+    </ul>
+
+    <h3>Business Support Associate, INFOCUS RESOURCES LTD (2018)</h3>
+    <ul>
+        <li>Conducted inductions and health and safety training for new employees, and managed right to work checks and RMS database updates</li>
+        <li>Communicated with administrators, contractors, and laborers via phone, email, and messaging platforms</li>
+        <li>Co-created a new system for conducting "Right to work checks" for new employees</li>
+    </ul>
+
+    <h3>Recovery Co-worker, IKEA Lakeside (2014- 2017)</h3>
+    <ul>
+        <li>As a Recovery Co-worker at IKEA Lakeside from May 2014 to December 2017, I was responsible for direct sales in the bargain corner, with a focus on creating and maintaining visually appealing sale areas. I also operated repackaging machines and other equipment, as well as appliances. I was a valued member of a team that successfully increased product recovery index from 50% to nearly 90%.</li>
+    </ul>
+
+    <h2>EDUCATION</h2>
+    <ul>
+        <li>Land Surveyor, Geodesy, cartography and cadastre, High school of constructions, Zilina, Slovakia (2006-2010)</li>
+        <li>A-level of English, A-level of Slovak language, A-level of practical assessment- geodesy, cartography and cadastre, A-level of Geographical Information Networks</li>
+    </ul>
+
+    <h2>KEY SKILLS</h2>
+    <ul>
+        <li>Strong verbal and written communication skills</li>
+        <li>Proven experience as an instructor and team lead</li>
+        <li>Fluent in Slovak, Czech, and English</li>
+        <li>Strong skills in regulatory compliance, customer service, and budget control</li>
+        <li>Advanced skills in Microsoft Office Suite (Excel, Word, Outlook, PowerPoint)</li>
+        <li>Able to multitask effectively and maintain high quality standards with minimal supervision.</li>
+    </ul>
+</body>
+</html>
 </main>
+
+
 
 <!-- Footer -->
 <footer>
