--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <h1>IGOR GASPEREC</h1>
-    <p>Orsett Road 116, RM175ET, Grays, Essex, +447874038582, iggasperec@gmail.com</p>
+    <button>iggasperec@gmail.com</button>
 
     <h2>PROFESSIONAL SUMMARY</h2>
     <p>Results-driven Associate with experience as Team Lead passionate about interacting and engaging with people. Carrying the experience in working with various levels of personnel in different organizations. Exponential problem solver with excellent analytical skills and solid computer literacy. Quickly learn new concepts and adapt well to new and changing conditions. Working well under pressure and adhere to strict deadlines. In charge of experimental shift pattern where I developed many improvements that helped continuously improve the health and safety as well as productivity metrics on site.</p>
@@ -99,7 +99,6 @@
 </body>
 </html>
 </main>
-
 
 
 <!-- Footer -->
