contact-header fixed

--- a/resume.html
+++ b/resume.html
@@ -14,13 +14,13 @@
     <!-- Navbar -->
     <nav>
          <!-- ADD THIS div for the hamburger menu -->
-         <div class="menu-toggle" id="mobile-menu">
+         <div class="menu-toggle" id="menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
         <!-- END of the added div -->
-        <ul class="nav-list">
+        <ul class="nav-list" id="menu">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/about.html">About Me</a></li>
             <li><a href="/contact.php">Contact</a></li>
