--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
     <body>
     
     <!-- Navbar -->
-    <nav>
-         <!-- ADD THIS div for the hamburger menu -->
-         <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <!-- END of the added div -->
-        <ul class="nav-list">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About Me</a></li>
-            <li><a href="/contact.php">Contact</a></li>
-            <li><a href="/experience.html">Experience</a></li>
-            <li><a href="/resume.html">Resume</a></li>
-            <li><a href="/work.html">Work</a></li>
-            <li><a href="/more.html">More</a></li>
-        </ul>
-    </nav>
+    
+<nav>
+  <div class="menu-toggle" id="mobile-menu">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
+  <ul class="nav-list">
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/about.html">About Me</a></li>
+    <li>
+      <a href="#">Portfolio</a>
+      <ul>
+        <li><a href="/experience.html">Experience</a></li>
+        <li><a href="/resume.html">Resume</a></li>
+        <li><a href="/work.html">Work</a></li>
+      </ul>
+    </li>
+    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/more.html">More</a></li>
+  </ul>
+</nav>
 
 <!-- Main Content -->
 <main class="container">
